--- a/CGC0120/WF/table.html
+++ b/CGC0120/WF/table.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="site.css">
+    </head>
     <body>
         <table border="1">
             <caption>DANH SÁCH HỌC VIÊN C0120</caption>
@@ -28,5 +30,8 @@
                 </tr>
             </tbody>
         </table> 
+        <p>please contact with us by click on <a href="mailto:khoa.nguyen@codegym.vn">here</a></p>
+        <p>please contact us by <a href="mailto:khoa.nguyen@codegym.vn">khoa.nguyen@codegym.vn</a></p>
+
     </body>
 </html>
