--- a/CGC0220/Module1/BCPreparation/PreCS/index.html
+++ b/CGC0220/Module1/BCPreparation/PreCS/index.html
@@ -2,14 +2,12 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="libs/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="libs/node_modules/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-success navbar-dark">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="login/login.html"><i class="fa fa-user"></i> Login</a>
@@ -23,13 +21,8 @@
         </div>
     </div>
     
-    <!-- jQuery library -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <script src="libs/node_modules/jquery/dist/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> -->
     <script src="libs/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.4.0/bootbox.min.js"></script> -->
     <script src="libs/node_modules/bootbox/dist/bootbox.min.js"></script>
 
     <script src="product.js"></script>
