--- a/CGC12/TableTemplate/index.html
+++ b/CGC12/TableTemplate/index.html
@@ -4,9 +4,6 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/dataTables.jqueryui.min.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/site.css">
-        
-  
-
     </head>
 
     <body>
@@ -14,8 +11,7 @@
             <h1>Users Management</h1>
             <div class="row">
                 <div class="col-12 mb-3">
-                    <a href="javascript:void(0);" class="btn btn-info"
-                       onclick="user.openAddEditUser()">Create</a>
+                    <a href="javascript:;" class="btn btn-info" onclick="employee.showModal()">Create</a>
                 </div>
             </div>
             <div class="row">
@@ -32,7 +28,6 @@
                             </tr>
                         </thead>
                         <tbody>
-
                         </tbody>
                     </table>
                 </div>
@@ -48,7 +43,7 @@
                         <h4 class="modal-title">Create New User</h4>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
-                    <input hidden id="Id" name="Id">
+                    <input hidden id="EmployeeId" name="EmployeeId" value="0">
                     <div class="modal-body">
                         <div class="row form-group">
                             <div class="col-4">
@@ -57,7 +52,7 @@
                             <div class="col-8">
                                 <input type="text" id="UserName" name="UserName"
                                         class="form-control"
-                                        data-rule-required="true">
+                                        data-rule-required="true" data-msg-required="Username is required">
                             </div>
                         </div>
                         <div class="row form-group">
@@ -92,10 +87,20 @@
                                     <input type="url" id="FaceBookUrl" name="FaceBookUrl" class="form-control" data-rule-required="true">
                                 </div>
                         </div>
+                        <div class="row form-group">
+                            <div class="col-4">
+                                <label>Country</label>
+                            </div>
+                            <div class="col-8">
+                                <select name="Country" id="Country" class="form-control">
+
+                                </select>
+                            </div>
+                    </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
-                        <a href="javascript:;" class="btn btn-danger" onclick="user.save()">Save</a>
+                        <a href="javascript:;" class="btn btn-danger" onclick="employee.save()">Create</a>
                     </div>
                 </div>
             </form>
@@ -111,5 +116,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.4.0/bootbox.js"></script>
     
-    <script src="scripts/user.js"></script>
+    <script src="scripts/employee.js"></script>
 </html>
